# j-lang

./: CMakeLists.txt
include/: Tokenizer.h  vector.h
src/: main.c
src/lib/: Tokenizer.c  vector.c
